--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </h1>
 
         <div class="duascolunas">
-          <div class="coluna-img"></div>
+          <div class="coluna-imgem"></div>
           <img src="img/computador.jpg" alt="computador">
-        </div>
+          </div>
           <div class="coluna-texto">
             <h3>
               Melissa de Medeiros Soares Galindo Cseh
