--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h1>
 
         <div class="duascolunas">
-          <div class="coluna-imgem"></div>
+          <div class="coluna-imgem">
           <img src="img/computador.jpg" alt="computador">
           </div>
           <div class="coluna-texto">
